fixed spacing on member avatars and button color

--- a/app/assets/stylesheets/components/_unjoined_group_members.scss
+++ b/app/assets/stylesheets/components/_unjoined_group_members.scss
@@ -1,6 +1,7 @@
 .each-member-avatar {
   border-radius: 50%;
   margin-right: 10px;
+  margin-bottom: 5px;
 }
 
 // .fa-user-plus {
